# kofon

./: .gitignore  CHATBOT.md  SUMMARY.md  bad_customisation.txt  index.html  script.js  styles.css
ai-agent-backend/: .env.example  .gitignore  NOTES_conversational_direction.md  PHASE_0.md  PHASE_1.md  PHASE_2.md  PHASE_3.md  PHASE_4.md  PHASE_5_PLAN.md  README.md  TEST_QUERIES.md  alembic.ini  chatgpt_concerns.md  concerns_analysis.md  docker-compose.yml  kofon_products_all.csv  main_concerns.md  product_types_inventory.json  pyproject.toml
ai-agent-backend/.venv-ocr/: pyvenv.cfg
ai-agent-backend/.venv-ocr/Scripts/: activate  activate.bat
ai-agent-backend/alembic/: env.py
ai-agent-backend/alembic/versions/: a7b1c2d3e4f5_add_product_page_url.py  c96b3d3b7fda_phase_1_initial_schema.py  d4e2a9f5c10b_phase_3_embeddings.py  f2a8c91d4e30_phase_4_side_effects.py
ai-agent-backend/app/: config.py  db.py  embeddings.py  i18n.py  main.py  persistence.py  runtime.py  serve.py
ai-agent-backend/app/agent/: __init__.py  checkpointer.py  graph.py  llm.py  sanitize.py  setup_checkpointer.py  smoke_2a.py  smoke_2b.py  smoke_2c.py  smoke_2d.py  smoke_3a.py  smoke_3b.py  smoke_3c.py  smoke_3d.py  smoke_4.py  smoke_i18n_zh.py  state.py
ai-agent-backend/app/crm/: __init__.py  log.py  zoho.py
ai-agent-backend/app/mail/: __init__.py  aliyun.py  log.py
ai-agent-backend/app/models/: __init__.py  content.py  runtime.py  sideeffects.py
ai-agent-backend/app/routers/: agent.py  tools.py
ai-agent-backend/app/schemas/: __init__.py  tools.py
ai-agent-backend/app/seed/: __init__.py  dedup_specs.py  embed.py  extract_pdf.py  extract_pdf_batch.py  extract_url.py  extract_url_batch.py  generate_use_cases.py  load.py  normalize.py  ocr_worker.py  promote_drafts.py
ai-agent-backend/app/sideeffects/: __init__.py  handlers.py  rfq.py  routing.py  routing.yaml
ai-agent-backend/app/tools/: __init__.py  build_custom_config.py  find_problems.py  get_solution.py  recommend_categories.py  search_products.py
ai-agent-backend/seed/: README.md  main_conversation_types.yaml  use_case_fits.csv  use_cases.yaml
ai-agent-backend/seed/drafts/: 100.product_type.yaml  (+180 more)
(+326 files in other folders)
