[project]
name = "kofon-chatbot-backend"
version = "0.0.0"
description = "Phase 0 skeleton — FastAPI + Postgres + Alembic for the Kofon chatbot."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "pyyaml>=6.0",
  # ---- Phase 2: agent (LangGraph + DeepSeek) ----
  # DeepSeek instead of Anthropic/OpenAI because Kofon is in China — see
  # memory/project-china-llm-constraint.md for the why.
  "langchain>=0.3",
  "langchain-core>=0.3",
  "langgraph>=0.2",
  "langchain-deepseek>=0.1",
  # Checkpointer writes graph state to Postgres between nodes so sessions
  # can resume. Uses psycopg async; coexists fine with the asyncpg driver
  # SQLAlchemy already uses for app code.
  "langgraph-checkpoint-postgres>=2.0",
  "psycopg[binary,pool]>=3.2",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.7",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
